상품검색 isEmpty() 제거